# AdventureStoryAI

./: README.md  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/core/: config.py  models.py  prompts.py  story_generator.py
backend/db/: database.py
backend/models/: job.py  story.py
backend/routers/: story.py
backend/schemas/: job.py  story.py
frontend/: .env.example  .gitignore  index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx  util.js
frontend/src/components/: LoadingStatus.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
